--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1444,7 +1444,7 @@ h1,h2,h3,h4,h5,h6{
 	background: #fff;
 }
 .blog-post-text{
-	background: #f6f6f6;
+	background: white;
 	padding: 60px 50px;
 }
 .blog-post-text h1{
