--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1931,6 +1931,7 @@ h1,h2,h3,h4,h5,h6{
 	margin-bottom: 70px;
 	border-top: 1px solid #eaeaea;
 	border-bottom: 1px solid #eaeaea;
+	text-align: center;
 }
 .single-project-share h4{
 	display: inline-block;
